# voxelization_toolkit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  appveyor.yml  collapse.h  dim3.h  edge_detect.h  factory.cpp  factory.h  fill_gaps.h  json_logger.cpp  json_logger.h  lru_cache.h  main.cpp  memoized_traversal.h  offset.h  polyfill.cpp  polyfill.h  processor.h  progress.cpp  progress.h  progress_writer.cpp  progress_writer.h  pyproject.toml  resample.h  set_voxel_iterator.cpp  shift.h  storage.cpp  storage.h  surface_count.sh  sweep.h  traversal.h  tribox3.cpp  util.h  volume.h  voxec.cpp  (+5 more)
.github/workflows/: build.yml  build_conda.yml  build_osx.yml  build_rocky.yml  build_win.yml  conda.yml
conda/: bld.bat  build.sh  environment.yml  meta.yaml
module/: __init__.py
python/voxec/: __init__.py  __main__.py
tests/: test_boolean.cpp  test_box_surface.cpp  test_collapse.cpp  test_covering.cpp  test_dimensionality_estimate.cpp  test_edges.cpp  test_fill_gaps.cpp  test_foundation.cpp  test_hdf.cpp  test_hdf_2.cpp  test_keep_neighbours.cpp  test_memmap.cpp  test_memoized_traversal.cpp  test_normal.cpp  test_offset.cpp  test_parser.cpp  test_parser_assert.cpp  test_parser_prop_filter.cpp  test_parser_resample.cpp  test_pca.cpp  test_polyfill.cpp  test_resample.cpp  test_space_ids.cpp  test_sweep_max.cpp  test_traversal.cpp  test_traversal_float.cpp  test_validate.cpp  test_vec_n.cpp  test_volume.cpp  test_voxelizer.cpp  test_wall.cpp
tests/fixtures/: covering.ifc  demo2.ifc  duplex_wall.ifc  schependom_foundation.ifc  voxelfile1.txt  voxelfile2.txt  voxelfile3.txt  voxelfile4.txt  voxelfile5.txt  voxelfile7.txt  voxelfile8.txt  voxelfilec.txt
wrap/: wrapper.i
